test/bad/bad48.dj
main {
    Object o;
    o = new Object();
    assert o; //asserted expression has non-nat type
}
